--- a/JobSeekingSystem/src/RecruiterJobGUI.form
+++ b/JobSeekingSystem/src/RecruiterJobGUI.form
@@ -19,7 +19,7 @@
         </properties>
         <border type="none"/>
         <children>
-          <grid id="f3d57" binding="jobContainer" layout-manager="GridLayoutManager" row-count="15" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+          <grid id="f3d57" binding="jobContainer" layout-manager="GridLayoutManager" row-count="17" column-count="5" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="50" left="50" bottom="50" right="50"/>
             <constraints>
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="2" anchor="1" fill="0" indent="0" use-parent-layout="false">
@@ -44,37 +44,18 @@
               </component>
               <component id="7004c" class="javax.swing.JLabel" binding="jobLocation">
                 <constraints>
-                  <grid row="8" column="0" row-span="1" col-span="4" vsize-policy="0" hsize-policy="7" anchor="8" fill="0" indent="0" use-parent-layout="false">
+                  <grid row="8" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="7" anchor="8" fill="0" indent="0" use-parent-layout="false">
                     <preferred-size width="-1" height="5"/>
                   </grid>
                 </constraints>
                 <properties>
-                  <text value="Location"/>
-                </properties>
-              </component>
-              <component id="daaab" class="javax.swing.JLabel" binding="jobSalary">
-                <constraints>
-                  <grid row="9" column="0" row-span="1" col-span="4" vsize-policy="0" hsize-policy="1" anchor="8" fill="0" indent="0" use-parent-layout="false">
-                    <preferred-size width="163" height="5"/>
-                  </grid>
-                </constraints>
-                <properties>
-                  <text value="$XX"/>
-                </properties>
-              </component>
-              <component id="d548b" class="javax.swing.JLabel" binding="jobType">
-                <constraints>
-                  <grid row="10" column="0" row-span="1" col-span="4" vsize-policy="0" hsize-policy="1" anchor="8" fill="0" indent="0" use-parent-layout="false">
-                    <preferred-size width="163" height="5"/>
-                  </grid>
-                </constraints>
-                <properties>
-                  <text value="jobType"/>
+                  <font size="12" style="1"/>
+                  <text value="Location:"/>
                 </properties>
               </component>
               <component id="8756d" class="javax.swing.JLabel" binding="jobDescription">
                 <constraints>
-                  <grid row="12" column="0" row-span="1" col-span="4" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false">
+                  <grid row="14" column="0" row-span="1" col-span="5" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false">
                     <minimum-size width="-1" height="20"/>
                     <preferred-size width="-1" height="20"/>
                     <maximum-size width="-1" height="20"/>
@@ -87,7 +68,7 @@
               </component>
               <component id="55190" class="javax.swing.JLabel">
                 <constraints>
-                  <grid row="13" column="0" row-span="1" col-span="4" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                  <grid row="15" column="0" row-span="1" col-span="5" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
                   <text value="View applicants below:"/>
@@ -95,7 +76,7 @@
               </component>
               <vspacer id="6afa3">
                 <constraints>
-                  <grid row="11" column="0" row-span="1" col-span="4" vsize-policy="0" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false">
+                  <grid row="12" column="1" row-span="1" col-span="4" vsize-policy="0" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false">
                     <minimum-size width="-1" height="15"/>
                     <preferred-size width="332" height="15"/>
                     <maximum-size width="-1" height="15"/>
@@ -104,7 +85,7 @@
               </vspacer>
               <vspacer id="2c455">
                 <constraints>
-                  <grid row="5" column="0" row-span="1" col-span="4" vsize-policy="0" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false">
+                  <grid row="5" column="0" row-span="1" col-span="5" vsize-policy="0" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false">
                     <minimum-size width="-1" height="15"/>
                     <preferred-size width="332" height="15"/>
                     <maximum-size width="-1" height="15"/>
@@ -113,7 +94,7 @@
               </vspacer>
               <hspacer id="4c534">
                 <constraints>
-                  <grid row="4" column="0" row-span="1" col-span="4" vsize-policy="1" hsize-policy="0" anchor="0" fill="1" indent="0" use-parent-layout="false">
+                  <grid row="4" column="0" row-span="1" col-span="5" vsize-policy="1" hsize-policy="0" anchor="0" fill="1" indent="0" use-parent-layout="false">
                     <minimum-size width="-1" height="10"/>
                     <maximum-size width="500" height="-1"/>
                   </grid>
@@ -121,7 +102,7 @@
               </hspacer>
               <component id="4a191" class="javax.swing.JLabel">
                 <constraints>
-                  <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="7" anchor="8" fill="0" indent="0" use-parent-layout="false">
+                  <grid row="1" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="7" anchor="8" fill="0" indent="0" use-parent-layout="false">
                     <preferred-size width="-1" height="5"/>
                   </grid>
                 </constraints>
@@ -129,60 +110,30 @@
                   <text value="Posted:"/>
                 </properties>
               </component>
-              <component id="8ff49" class="javax.swing.JLabel">
-                <constraints>
-                  <grid row="1" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="7" anchor="8" fill="0" indent="0" use-parent-layout="false">
-                    <preferred-size width="-1" height="5"/>
-                  </grid>
-                </constraints>
-                <properties>
-                  <text value="10/06/2022"/>
-                </properties>
-              </component>
               <component id="23d2c" class="javax.swing.JLabel">
                 <constraints>
-                  <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="7" anchor="8" fill="0" indent="0" use-parent-layout="false">
+                  <grid row="2" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="7" anchor="8" fill="0" indent="0" use-parent-layout="false">
                     <preferred-size width="-1" height="5"/>
                   </grid>
                 </constraints>
                 <properties>
-                  <text value="Applications:"/>
+                  <text value="Applicants:"/>
                 </properties>
               </component>
-              <component id="48de3" class="javax.swing.JLabel">
+              <component id="c620d" class="javax.swing.JLabel" binding="employerLabel">
                 <constraints>
-                  <grid row="2" column="1" row-span="1" col-span="3" vsize-policy="0" hsize-policy="7" anchor="8" fill="0" indent="0" use-parent-layout="false">
+                  <grid row="6" column="0" row-span="1" col-span="5" vsize-policy="0" hsize-policy="7" anchor="8" fill="0" indent="0" use-parent-layout="false">
                     <preferred-size width="-1" height="5"/>
                   </grid>
                 </constraints>
                 <properties>
-                  <text value="10"/>
-                </properties>
-              </component>
-              <component id="d9cc1" class="javax.swing.JLabel">
-                <constraints>
-                  <grid row="6" column="0" row-span="1" col-span="4" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
-                    <preferred-size width="-1" height="10"/>
-                  </grid>
-                </constraints>
-                <properties>
-                  <font size="14" style="1"/>
-                  <text value="Job Details"/>
-                </properties>
-              </component>
-              <component id="c620d" class="javax.swing.JLabel">
-                <constraints>
-                  <grid row="7" column="0" row-span="1" col-span="4" vsize-policy="0" hsize-policy="7" anchor="8" fill="0" indent="0" use-parent-layout="false">
-                    <preferred-size width="-1" height="5"/>
-                  </grid>
-                </constraints>
-                <properties>
+                  <font size="16" style="1"/>
                   <text value="Employer"/>
                 </properties>
               </component>
               <component id="40829" class="javax.swing.JLabel">
                 <constraints>
-                  <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="7" anchor="8" fill="0" indent="0" use-parent-layout="false">
+                  <grid row="3" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="7" anchor="8" fill="0" indent="0" use-parent-layout="false">
                     <preferred-size width="-1" height="5"/>
                   </grid>
                 </constraints>
@@ -190,24 +141,14 @@
                   <text value="Status:"/>
                 </properties>
               </component>
-              <component id="4dc5c" class="javax.swing.JLabel">
+              <scrollpane id="33a9e" binding="applicationScrollPane">
                 <constraints>
-                  <grid row="3" column="1" row-span="1" col-span="3" vsize-policy="0" hsize-policy="7" anchor="8" fill="0" indent="0" use-parent-layout="false">
-                    <preferred-size width="-1" height="5"/>
-                  </grid>
-                </constraints>
-                <properties>
-                  <text value="Filled"/>
-                </properties>
-              </component>
-              <scrollpane id="33a9e" binding="jobApplicationsTable">
-                <constraints>
-                  <grid row="14" column="0" row-span="1" col-span="4" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                  <grid row="16" column="0" row-span="1" col-span="5" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties/>
                 <border type="none"/>
                 <children>
-                  <component id="1d2a2" class="javax.swing.JTable" binding="table1" default-binding="true">
+                  <component id="1d2a2" class="javax.swing.JTable" binding="applicationsTable">
                     <constraints/>
                     <properties/>
                   </component>
@@ -215,7 +156,7 @@
               </scrollpane>
               <component id="3747e" class="javax.swing.JButton" binding="editJobButton">
                 <constraints>
-                  <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="4" fill="0" indent="0" use-parent-layout="false">
+                  <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="4" fill="0" indent="0" use-parent-layout="false">
                     <minimum-size width="-1" height="30"/>
                     <preferred-size width="50" height="30"/>
                     <maximum-size width="100" height="-1"/>
@@ -228,6 +169,93 @@
                   <text value="Edit Job"/>
                 </properties>
               </component>
+              <component id="c2d10" class="javax.swing.JLabel" binding="locationLabel">
+                <constraints>
+                  <grid row="9" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <font style="0"/>
+                  <text value="Label"/>
+                </properties>
+              </component>
+              <component id="8ff49" class="javax.swing.JLabel">
+                <constraints>
+                  <grid row="1" column="3" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false">
+                    <preferred-size width="-1" height="5"/>
+                  </grid>
+                </constraints>
+                <properties>
+                  <text value="10/06/2022"/>
+                </properties>
+              </component>
+              <component id="4dc5c" class="javax.swing.JLabel" binding="statusLabel">
+                <constraints>
+                  <grid row="3" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false">
+                    <preferred-size width="-1" height="5"/>
+                  </grid>
+                </constraints>
+                <properties>
+                  <text value="Filled"/>
+                </properties>
+              </component>
+              <component id="48de3" class="javax.swing.JLabel" binding="applicantNum">
+                <constraints>
+                  <grid row="2" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false">
+                    <preferred-size width="-1" height="5"/>
+                  </grid>
+                </constraints>
+                <properties>
+                  <text value="10"/>
+                </properties>
+              </component>
+              <hspacer id="4fbbe">
+                <constraints>
+                  <grid row="11" column="2" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                </constraints>
+              </hspacer>
+              <component id="ea3e0" class="javax.swing.JLabel" binding="jobTypeLabel">
+                <constraints>
+                  <grid row="11" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <text value="jobType"/>
+                </properties>
+              </component>
+              <component id="daaab" class="javax.swing.JLabel" binding="jobSalary">
+                <constraints>
+                  <grid row="12" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="1" anchor="8" fill="0" indent="0" use-parent-layout="false">
+                    <preferred-size width="163" height="5"/>
+                  </grid>
+                </constraints>
+                <properties>
+                  <font size="12" style="0"/>
+                  <text value="$"/>
+                </properties>
+              </component>
+              <component id="8f1e0" class="javax.swing.JLabel">
+                <constraints>
+                  <grid row="11" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <font size="12" style="1"/>
+                  <text value="Salary"/>
+                </properties>
+              </component>
+              <hspacer id="c9b0a">
+                <constraints>
+                  <grid row="7" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                </constraints>
+              </hspacer>
+              <hspacer id="c6399">
+                <constraints>
+                  <grid row="10" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                </constraints>
+              </hspacer>
+              <vspacer id="edee1">
+                <constraints>
+                  <grid row="13" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+                </constraints>
+              </vspacer>
             </children>
           </grid>
         </children>
