--- a/JobSeekingSystem/src/RecruiterHomeGUI.form
+++ b/JobSeekingSystem/src/RecruiterHomeGUI.form
@@ -279,7 +279,7 @@
                   </grid>
                 </constraints>
               </hspacer>
-              <scrollpane id="29d">
+              <scrollpane id="29d" binding="seekerTable">
                 <constraints>
                   <grid row="12" column="0" row-span="1" col-span="3" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
                 </constraints>
